<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_title_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3D069F"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/game_over"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="serif"
        android:padding="20dp"

        android:text="@string/heart"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/btn_menu"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/btn_restart"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>