<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu">

    <Button
        android:id="@+id/btn_play"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_default"
        android:contentDescription="@string/play"
        android:fontFamily="serif"
        android:text="@string/play"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_default"
        android:contentDescription="@string/sett_menu"
        android:fontFamily="serif"
        android:text="@string/sett_menu"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <Button
        android:id="@+id/btn_apps"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_default"
        android:fontFamily="serif"
        android:scaleType="fitCenter"
        android:text="@string/apps"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_default"
        android:contentDescription="@string/exit_menu"
        android:fontFamily="serif"
        android:text="@string/exit_menu"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />
</androidx.constraintlayout.widget.ConstraintLayout>